test-scenarios/bookinfo-pro/k8s/00namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo-pro
  labels:
    istio-injection: disabled
---
